add some initial docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2018"
 redis = { version = "0.16.0", features = ["aio"] }
 async-session = "1.0.2"
 
+[dev-dependencies]
+async-std = { version = "1.6.2", features = ["attributes"] }
+
 [patch.crates-io]
 async-session = { git = "https://github.com/jbr/async-session", branch = "tide" }
