--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "async-redis-session"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "redis session store for async-session"
+readme = "README.md"
+repository = "https://github.com/jbr/async-redis-session"
+documentation = "https://docs.rs/async-redis-session"
+license = "MIT OR Apache-2.0"
+keywords = ["sessions", "tide", "async-session", "redis"]
+categories = ["web-programming::http-server", "web-programming", "database"]
 
 [dependencies]
 redis = { version = "0.16.0", features = ["aio"] }
