--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming", "database"]
 
 [dependencies.redis]
 version = "0.21.4"
-features = ["aio", "async-std-comp"]
+features = ["aio", "tokio-comp", "connection-manager"]
 
 [dependencies]
 async-session = "3.0.0"
