--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ features = ["aio", "tokio-comp", "connection-manager"]
 async-session = "3.0.0"
 
 [dev-dependencies]
-async-std = { version = "1.10.0", features = ["attributes"] }
+tokio = { version = "1.21", features = ["full", "tracing"] }
