--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ license = "MIT OR Apache-2.0"
 keywords = ["sessions", "tide", "async-session", "redis"]
 categories = ["web-programming::http-server", "web-programming", "database"]
 
-[dependencies.redis]
-version = "0.21.0"
-features = ["aio", "async-std-comp"]
-
 [dependencies]
 async-session = "3.0.0"
 
+[dependencies.redis]
+version = "0.21.0"
+features = ["aio", "async-std-comp", "connection-manager"]
+
 [dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
+ulid = "1.0.0"
