adapt for tokio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,9 @@ categories = ["web-programming::http-server", "web-programming", "database"]
 
 [dependencies]
 async-session = "3.0.0"
-
-[dependencies.redis]
-version = "0.21.0"
-features = ["aio", "async-std-comp", "connection-manager"]
+redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
 
 [dev-dependencies]
-async-std = { version = "1.9.0", features = ["attributes"] }
 ulid = "1.0.0"
+tokio = { version = "1.22", features = ["full"] }
+tokio-test = "0.4.2"
