--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,15 @@ keywords = ["sessions", "tide", "async-session", "redis"]
 categories = ["web-programming::http-server", "web-programming", "database"]
 
 [dependencies.redis]
-version = "0.21.0"
-features = ["aio", "async-std-comp"]
+version = "0.22.3"
+features = ["aio"]
 
 [dependencies]
-async-session = "3.0.0"
+async-session = { git = "https://github.com/http-rs/async-session", branch = "overhaul-session-and-session-store", default-features = false }
+base64 = "0.21.0"
+serde_json = "1.0.93"
+thiserror = "1.0.38"
 
 [dev-dependencies]
-async-std = { version = "1.9.0", features = ["attributes"] }
+redis = { version = "0.22.3", features = ["async-std-comp"] }
+async-std = { version = "1.12.0", features = ["attributes"] }
