--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "async-redis-session"
-version = "0.2.2"
-authors = ["Jacob Rothstein <hi@jbr.me>"]
-edition = "2018"
+version = "0.2.3"
+authors = ["Jacob Rothstein <hi@jbr.me>", "0xAlcibiades <alcibiades@valorem.xyz>"]
+edition = "2021"
 description = "redis session store for async-session"
 readme = "README.md"
 repository = "https://github.com/jbr/async-redis-session"
 documentation = "https://docs.rs/async-redis-session"
 license = "MIT OR Apache-2.0"
-keywords = ["sessions", "tide", "async-session", "redis"]
+keywords = ["sessions", "axum", "async-session", "redis"]
 categories = ["web-programming::http-server", "web-programming", "database"]
 
 [dependencies]
 async-session = "3.0.0"
-redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
+redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
 
 [dev-dependencies]
 ulid = "1.0.0"
